# BinaryCodeGenMatrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: automatic-version-tag.yml
cmake/: external_repos.cmake
cmake/external_repos/: BinaryCodeWord.cmake
examples/: basic_usage.cpp
include/: BinaryCodeGenMat.hpp
include/BinaryCodeGenMat/: BinaryCodeGenMat.hpp
src/: BinaryCodeGenMat.cpp
tests/: test_BinaryCodeGenMat.cpp
tests/cmake/: BinaryCodeGenMatConfig.cmake.in
tests/examples/: basic_usage.cpp
tests/include/: BinaryCodeGenMat.hpp
